Worker: Handle failures to start a worker thread

Bug: 755054
Change-Id: I4e793fc370bf0a0f7e66342bbd8963a849bd2cbb